<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/particularImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_constraintBottom_toTopOf="@+id/AddImage"
        android:layout_constraintLeft_toLeftOf="parent"
        android:layout_constraintRight_toRightOf="parent"
        android:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/particular_image"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/AddImage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_constraintBottom_toTopOf="@+id/ProductNameEditText"
        android:layout_constraintTop_toBottomOf="@+id/particularImage"
        android:layout_constraintLeft_toLeftOf="parent"
        android:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/insert_image"
        android:labelFor="@id/AddImage"
        android:minHeight="60dp"
        android:onClick="InsertPhoto"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/ic_take_image"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="245dp" />

    <EditText
        android:id="@+id/ProductNameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_constraintBottom_toTopOf="@+id/MRPEditText"
        android:layout_constraintTop_toBottomOf="@+id/AddImage"
        android:layout_constraintLeft_toLeftOf="parent"
        android:layout_constraintRight_toRightOf="parent"
        android:hint="@string/enter_product_name"
        android:hintTextColor="#757575"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="357dp" />

    <EditText
        android:id="@+id/MRPEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_constraintBottom_toTopOf="@+id/LandingEditText"

        android:layout_constraintTop_toBottomOf="@+id/ProductNameEditText"
        android:layout_constraintLeft_toLeftOf="parent"
        android:layout_constraintRight_toRightOf="parent"
        android:hint="@string/enter_the_maximum_retail_price_here"
        android:hintTextColor="#757575"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="430dp" />

    <EditText
        android:id="@+id/LandingEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_constraintBottom_toTopOf="@+id/SaveButton"
        android:layout_constraintTop_toBottomOf="@+id/MRPEditText"
        android:layout_constraintLeft_toLeftOf="parent"
        android:layout_constraintRight_toRightOf="parent"
        android:hint="@string/enter_the_landing_amount_here"
        android:hintTextColor="#757575"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="513dp" />



    <ImageButton
        android:id="@+id/SaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_constraintTop_toBottomOf="@+id/LandingEditText"
        android:layout_constraintLeft_toLeftOf="parent"
        android:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/save_the_item"
        android:labelFor="@id/SaveButton"
        android:onClick="SaveItem"
        android:minHeight="55dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_save_button"
        tools:layout_editor_absoluteX="-101dp"
        tools:layout_editor_absoluteY="614dp"
        android:background="BB86FC"/>
</androidx.constraintlayout.widget.ConstraintLayout>